node-fluentd/kube/expose.yaml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "node-hello-service"
  namespace: "logging"
  labels:
    app: "node-hello"
spec:
  ports:
    - protocol: "TCP"
      port: 80
      targetPort: 3000
  selector:
    app: "node-hello"
  type: "LoadBalancer"
