node-fluentd/kube/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: node-testing
  annotations:
    kubernetes.io/tls-acme: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-uat"
spec:
  ingressClassName: kong
  tls:
  - secretName: backend-uat.allcare.id.ssl
    hosts:
    - backend-uat.allcare.id
  rules:
  - host: backend-uat.allcare.id
    http:
      paths:
      - path: /test
        pathType: ImplementationSpecific
        backend:
          service:
            name: node-hello-service
            port:
              number: 3000
